--- a/apple/templates/apple-register.html
+++ b/apple/templates/apple-register.html
@@ -24,6 +24,7 @@
         </div>
     </section>
     <script>
+    /*
         // const getlocation = document.getElementById('getlocation');
         // getlocation.addEventListener('click', evt=>{
         //     if ('geolocation' in navigator){
@@ -52,6 +53,24 @@
         function showPosition(position) {
             lat.value =
             loc.value = "Lat: " + position.coords.latitude + "," + " Long: " + position.coords.longitude;
+        }
+    */
+
+        window.onload = getMyLocation;
+        function getMyLocation(){
+            if(navigator.geolocation){
+                navigator.geolocation.getCurrentPosition(addGeoLocation);
+            }else{
+                console.log('Your phone does not have geolocation support')
+            }
+        }
+        function addGeoLocation(location){
+            let lat = location.coords.latitude;
+            let long = location.coords.longitude;
+            let geoLat = document.getElementById('id_lat');
+            let geoLong = document.getElementById('id_long');
+            geoLat.value = lat;
+            geoLong.value = long;
         }
 
     </script>
